@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = . src docs
+SUBDIRS = . src docs docs-tmpl
 
 if BUILD_TESTS
 
