@@ -1,0 +1,34 @@
+<SECTION>
+<FILE>object</FILE>
+<TITLE>GtkdocObject</TITLE>
+GtkdocObject
+GtkdocObjectClass
+gtkdoc_object_new
+GTKDOC_OBJECT_MACRO_DUMMY
+GTKDOC_OBJECT_MACRO_SUM
+<SUBSECTION Standard>
+GTKDOC_OBJECT
+GTKDOC_IS_OBJECT
+GTKDOC_TYPE_OBJECT
+gtkdoc_object_get_type
+GTKDOC_OBJECT_CLASS
+GTKDOC_IS_OBJECT_CLASS
+GTKDOC_OBJECT_GET_CLASS
+</SECTION>
+
+<SECTION>
+<FILE>iface</FILE>
+<TITLE>GtkdocIface</TITLE>
+GtkdocIface
+GtkdocIfaceInterface
+gtkdoc_iface_configure
+GTKDOC_IFACE_MACRO_DUMMY
+GTKDOC_IFACE_MACRO_SUM
+<SUBSECTION Standard>
+GTKDOC_IFACE
+GTKDOC_IS_IFACE
+GTKDOC_TYPE_IFACE
+gtkdoc_iface_get_type
+GTKDOC_OBJECT_GET_INTERFACE
+</SECTION>
+
