@@ -1,0 +1,4 @@
+#include <tester.h>
+
+gtkdoc_object_get_type
+gtkdoc_iface_get_type
